resources/kubernetes/dashboard-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-app-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"

spec:
  tls:
    - hosts:
        - dashboard.data4life.se
      secretName: data4life-secrets
  rules:
    - host: dashboard.data4life.se
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-app-svc
              servicePort: 80
          - path: /*
            backend:
              serviceName: dashboard-app-svc
              servicePort: 80
