resources/kubernetes/dashboard-new-app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-app-copy-svc
  labels:
    app: dashboard-app-copy
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: dashboard-app-copy
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dashboard-app-copy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard-app-copy
    spec:
      containers:
        - name: dashboard-app-copy
          image: eu.gcr.io/public-data4life/covid-19-mapview-dashboard:master-20200411094828-b09cced
          ports:
            - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-app-copy-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"

spec:
  tls:
    - hosts:
        - demo-dashboard.data4life.se
      secretName: data4life-secrets
  rules:
    - host: demo-dashboard.data4life.se
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-app-copy-svc
              servicePort: 80
          - path: /*
            backend:
              serviceName: dashboard-app-copy-svc
              servicePort: 80
